add element box

--- a/index.html
+++ b/index.html
@@ -21,11 +21,19 @@
           <button class="buttonOne">Добавить</button>
         </div>
 
-        <div class="list">
-        <div class="check"><input type="checkbox" ></div>
-        <div class="text"><label>Выбор 1</label></div>
-        <div class="close">x</div>
+        <div id="list">
+        
         </div>
+
+        <!-- <div class="element">
+
+        <div class="check"><input type="checkbox" ></div>
+
+        <div class="text"><label>Выбор 1</label></div>
+
+        <div class="close">x</div>
+
+        </div> -->
 
         <div class="delete">
           <button class="buttonTwo">Удалить завершенные</button>
