--- a/index.html
+++ b/index.html
@@ -13,33 +13,21 @@
     <header class="header"> 
       <div> <h1 class="h1"> ToDo List </h1></header>
       </div>
+
     <main>
-      <div class="card">
+      <div id="card" class="cardClass">
 
-        <div class="search"> 
-          <input class="input" type="text" id="idinput" name="inputName" placeholder="Сделать удаление завершенных и всех"> <br>
-          <button class="buttonOne">Добавить</button>
-        </div>
 
-        <div id="list">
-        
-        </div>
+        <div id="newDo" class="newDoClass"> </div>
 
-        <!-- <div class="element">
-
-        <div class="check"><input type="checkbox" ></div>
-
-        <div class="text"><label>Выбор 1</label></div>
-
-        <div class="close">x</div>
-
-        </div> -->
+        <div id="list"> </div>
 
         <div class="delete">
           <button class="buttonTwo">Удалить завершенные</button>
           <button class="buttonThree">Удалить все</button>
         </div>
 
+        
       </div>
 
     </main>
