--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 
         <div id="list"> </div>
 
-        <div class="delete">
-          <button class="buttonTwo">Удалить завершенные</button>
-          <button class="buttonThree">Удалить все</button>
+        <div id="delete" class="delete">
+
         </div>
 
         
