--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;600;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <body>
     <header class="header"> 
       <div> <h1 class="h1"> ToDo List </h1></header>
@@ -30,7 +29,7 @@
       </div>
 
     </main>
-    <footer></footer>
+    <footer style="height:150px;"></footer>
   </body>
   <script type="module" src="./javascript/javascript.js"></script>
 </html>
