--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
 
     </main>
-    <footer style="height:150px;"></footer>
+    <footer></footer>
   </body>
   <script type="module" src="./javascript/javascript.js"></script>
 </html>
