--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
       <div id="registration" class="cardNewUser displayNone">
         <form class="formNewUser" name="formNewUser">
           <p class="textNewUser">Новый пользователь</p>
-          <input id="nickname" type="text" name="name" class="inputNewUser" placeholder="Ник">
+          <input id="nickname" type="text" name="username" class="inputNewUser" placeholder="Ник">
           <input id="email" type="email" name="email" class="inputNewUser" placeholder="E-mail">
           <input id="fname" type="text" name="fname" class="inputNewUser" placeholder="Имя">
           <input id="lname" type="text" name="lname" class="inputNewUser" placeholder="Фамилия">
-          <!-- <input id="password_hash" type="password_hash" name="password_hash" class="inputNewUser" placeholder="Пароль"> -->
+          <input id="password_hash" type="password_hash" name="password_hash" class="inputNewUser" placeholder="Пароль">
           <button id="buttonRegistration" class="buttonNewUser">Регистрация</button>
         </form>
       </div>
@@ -48,7 +48,7 @@
       <div id="start" class="startCard">
 
         <form class="enterUser" name="enterUser">
-          <input id="nickname" type="text" name="name" class="inputNewUser" placeholder="Ник">
+          <input id="nickname" type="text" name="username" class="inputNewUser" placeholder="Ник">
           <input id="password_hash" type="password_hash" name="password_hash" class="inputNewUser" placeholder="Пароль">
         </form>
         <button id="enter" class="buttonStart" style="margin-bottom:40px ;">Вход</button>
